--- a/math154/calculus1_continuity.html
+++ b/math154/calculus1_continuity.html
@@ -157,6 +157,15 @@ Which of the following is also true?
       </ol>
     </div>
 
+    <h2>Example  </h2>
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex9">Example</button>
+      <div id="ex9" class="collapse">
+        <P> (from UW Stout math professor Dr. Benson)
+        <P>Determine whether the function \(g(x)\) is continuous on \((-\infty,\infty)\).
+          If it is not continuous, classify all discontinuities.
+          \(g(x) = \begin{cases} x^2, & x<1\\ \ln(x) + 1, & 1\le x < e \\ x, & x>e\end{cases}\)<br>
+          <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_rg35vhmy&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapter*s.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_zsaegwbb" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
+      </div>
 
 </body>
 </html>
