--- a/math154/calculus1_limit_def_derivative.html
+++ b/math154/calculus1_limit_def_derivative.html
@@ -46,6 +46,8 @@ $(function () {
         <li>\(\displaystyle f'(a) = \lim_{x \to a} \frac{f(x) - f(a)}{x-a}\)<br><br>
         </ol>
       <P>Can you explain why these are equivalent?
+        <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex00a">Answer</button>
+          <div id="ex00a" class="collapse">Let \(h=x-a\). Then \(h \to 0\) is the same as \(x \to a\) and the difference quotients are the same.</div>
     </div>
 
     <h2>Example</h2>
