--- a/math250/DELAhome.html
+++ b/math250/DELAhome.html
@@ -29,8 +29,9 @@
 <hr>
 
 <ul>
-  <li><a href="https://tyler-skorczewski-math.github.io/math250/intro_to_DE.html">Introduction to DEs</a>
-  <li><a href="https://tyler-skorczewski-math.github.io/math250/intro_DE_slopefields.html">Slopefields</a>
+  <!--<li><a href="https://tyler-skorczewski-math.github.io/math250/intro_to_DE.html">Introduction to DEs</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math250/intro_DE_slopefields.html">Slopefields</a>-->
+  <li><a href="https://tyler-skorczewski-math.github.io/math250/week1.html">week 1</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math250/week2.html">week 2</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math250/week3.html">week 3</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math250/week4.html">week 4</a>
