--- a/math154/calculus1_derivative_rules.html
+++ b/math154/calculus1_derivative_rules.html
@@ -156,7 +156,7 @@ $(function () {
 <div id="ex6" class="collapse">
   <P>Power Rule for Derivatives: If \(f(x) = x^n\), then \(f'(x) = nx^{n-1}\).<br><br>
   <P>Whenever we find a rule for derivatives, we also find a rule for antiderivatives.<br><br>
-  <P>Power Rule for Derivatives: If \(f(x) = x^n\) and \(n \neq -1\), then the function \(F(x)\) such that
+  <P>Power Rule for Antiderivatives: If \(f(x) = x^n\) and \(n \neq -1\), then the function \(F(x)\) such that
     \(F'(x) = f(x)\) is \(F(x) = \frac{1}{n+1}x^{n+1} + C\) for any constant \(C\).<br><br>
 
     <P>Find \(F(x)\) such that \(F'(x) = f(x)\) for the functions below.
