--- a/math154/calculus1_limit_def_derivative.html
+++ b/math154/calculus1_limit_def_derivative.html
@@ -165,6 +165,33 @@ def _(f=input_box(f,label="f(x) =  "),x0=input_box(x0,label="x0 = "),pm=(1.,(0.0
           </ol>
     </div>
 
+    <h2>Example -</h2>
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#eex1">Example</button>
+      <div id="eex1" class="collapse">
+        <P>Consider the function \(f(x) = x^2\).
+          <ol>
+            <li>Use the definition of derivative to find \(f'(1)\).<br>
+            <li>Use the definition of derivative to find \(f'(2)\).<br>
+            <li>Use the definition of derivative to find \(f'(3)\).<br>
+          </ol><br>
+
+        <P>Do you see a pattern here? Can you guess the form for \(f'(x)\)?
+      </div>
+
+      </div>
+
+    <h2>Examples </h2>
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#gex1">Example</button>
+      <div id="gex1" class="collapse">
+        <P>Consider the function \(g(x) = x^3\).
+          <ol>
+            <li>Use the definition of derivative to find \(g'(1)\).<br>
+            <li>Use the definition of derivative to find \(g'(2)\).<br>
+            <li>Use the definition of derivative to find \(g'(3)\).<br>
+          </ol><br>
+
+        <P>Do you see a pattern here? Can you guess the form for \(g'(x)\)?
+      </div>
 
 
 </body>
