--- a/math154/calculus1_inverses.html
+++ b/math154/calculus1_inverses.html
@@ -125,6 +125,7 @@ show(p3+pti)
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exexp">Example</button>
 <div id="exexp" class="collapse">
   <P>How many functions can you find that are their own inverse? What do you notice about these functions?
+  <P><b>Fall 2020 Math 153 students</b> Find the discussion page in Canvas on this topic and post to earn some extra credit.
 </div>
 
 
